--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ LAB3/Sprawko.fls
 LAB3/Sprawko.synctex.gz
 LAB3/Sprawko.log
 LAB3/test.m
+LAB3/Sprawko/testtt.m
+LAB3/Sprawko/Sprawko.log
+LAB3/Sprawko/Sprawko.fls
+LAB3/Sprawko/Sprawko.aux
+LAB3/Sprawko/Sprawko.fdb_latexmk
+LAB3/Sprawko/Sprawko.synctex.gz
