--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ LAB3/Sprawko/Sprawko.fls
 LAB3/Sprawko/Sprawko.aux
 LAB3/Sprawko/Sprawko.fdb_latexmk
 LAB3/Sprawko/Sprawko.synctex.gz
+LAB3/Sprawko1/Sprawko1.synctex.gz
+LAB3/Sprawko1/Sprawko1.synctex(busy)
+LAB3/Sprawko1/Sprawko1.log
+LAB3/Sprawko1/Sprawko1.fls
+LAB3/Sprawko1/Sprawko1.fdb_latexmk
+LAB3/Sprawko1/Sprawko1.aux
