--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@ LAB3/Sprawko1/Sprawko1.log
 LAB3/Sprawko1/Sprawko1.fls
 LAB3/Sprawko1/Sprawko1.fdb_latexmk
 LAB3/Sprawko1/Sprawko1.aux
+LAB5/Sprawko3/slprj/sim/varcache/model_1/checksumOfCache.mat
+LAB5/Sprawko3/slprj/sim/varcache/model_1/tmwinternal/simulink_cache.xml
+LAB5/Sprawko3/slprj/sim/varcache/model_1/varInfo.mat
+LAB5/slprj/sim/varcache/model_1/varInfo.mat
+LAB5/slprj/sim/varcache/model_1/tmwinternal/simulink_cache.xml
+LAB5/slprj/sim/varcache/model_1/checksumOfCache.mat
+LAB5/Sprawko3/model_1.slxc
+LAB5/model_1.slxc
