--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ LAB5/slprj/sim/varcache/model_1/tmwinternal/simulink_cache.xml
 LAB5/slprj/sim/varcache/model_1/checksumOfCache.mat
 LAB5/Sprawko3/model_1.slxc
 LAB5/model_1.slxc
+LAB5/Sprawko3/graph_1.fig
