--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ LAB5/slprj/sim/varcache/model_1/checksumOfCache.mat
 LAB5/Sprawko3/model_1.slxc
 LAB5/model_1.slxc
 LAB5/Sprawko3/graph_1.fig
+LAB5/Sprawko3/sprawko4.aux
+LAB5/Sprawko3/sprawko4.fdb_latexmk
+LAB5/Sprawko3/sprawko4.log
+LAB5/Sprawko3/sprawko4.fls
+LAB5/Sprawko3/sprawko4.synctex.gz
+LAB5/Sprawko3/testtttttttttttttttttttttttttttttttttttt.m
+LAB5/Sprawko3/model_1.slx.autosave
+*.asv
