--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ LAB5/Sprawko3/sprawko4.synctex.gz
 LAB5/Sprawko3/testtttttttttttttttttttttttttttttttttttt.m
 LAB5/Sprawko3/model_1.slx.autosave
 *.asv
+LAB6/slprj/sim/varcache/lab6_1_sim/tmwinternal/simulink_cache.xml
+LAB6/slprj/sim/varcache/lab6_1_sim/checksumOfCache.mat
+LAB6/slprj/sim/varcache/lab6_1_sim/varInfo.mat
+*.slxc
