--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ LAB6/slprj/sim/varcache/lab6_1_sim/tmwinternal/simulink_cache.xml
 LAB6/slprj/sim/varcache/lab6_1_sim/checksumOfCache.mat
 LAB6/slprj/sim/varcache/lab6_1_sim/varInfo.mat
 *.slxc
+LAB6/Sprawko4/Skrypt/testt.slx.autosave
+LAB6/Sprawko4/Skrypt/testt.slx.autosave
