--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ LAB6/slprj/sim/varcache/lab6_1_sim/varInfo.mat
 *.slxc
 LAB6/Sprawko4/Skrypt/testt.slx.autosave
 LAB6/Sprawko4/Skrypt/testt.slx.autosave
+LAB6/Sprawko4/Skrypt/slprj/sim/varcache/main_schemat/tmwinternal/simulink_cache.xml
