--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ LAB6/Sprawko4/Skrypt/slprj/sim/varcache/main_schemat/tmwinternal/simulink_cache.
 *.mat
 *.xml
 *.rels
+notatki_Marcin_Sieradzki.pdf
